I changed most of it
Yep

--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Title</title>
+    <h1>Computer Specs</h1>
 </head>
 <body>
-    <h1>This is a heading</h1>
-    <p>This is a paragraph. </p>
-    <p>Click <a href="http://google.com">here</a> to visit Google.</p>
+
+ <p>Click <a href="Diving.html">here</a> to visit Diving.</p>
+ <p>Click <a href="extra.html">here</a> to visit Sxtra.</p>
+    <h3>Brand</h3>
+<li>Mircosoft corporations</li>
+
+<h3>Operating System</h3>
+<li>64-bit operating system, x64-based processor</li>
+<li>Touch support with 10 touch points</li>
+<li>Windows 10 Home</li>
+
+<h3>CPU</h3>
+<li>Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz   1.19 GHz</li>
+
+<h3>RAM</h3>
+<li>8.00 GB (7.60 GB usable)</li>
+
+<h3>Storage (HDD/SSD/Flash/etc.)</h3>
+<li>Type storage SDD</li>
+<li>237GB total storage</li>
+<li>71.8GB Used 165GB left</li>
+
+<h3>Wireless (Wi-Fi/Bluetooth)</h3>
+* Wi-Fi
+* Bluetooth
+* Display screen 
+
+<h3>Ports</h3>
+<li>USB A</li>
+<li>USB C</li>
+<li>HeadPhone Jack</li>
+<li>Charger Port</li>
+
+<h3>Commentary</h3>
+<li>Yes I like my computer. I have had it for almost a year now and used alot during the online learning.</li>
+<li>Some activitys that make my computer slow down are launching big games and having lots of tabs open.</li>
+<li>Photo of my Computer!</li>
+<img/src=131466587-eac1b10d-11a3-4b10-a107-e405557b6b77.JPG
 
 </body>
 </html>
